[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/FilePicker.gd" type="Script" id=1]
[ext_resource path="res://Art/black.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 0.512207
margin_top = 4.4949
margin_right = 1022.51
margin_bottom = 603.495
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Control"]
margin_left = 2.0
margin_top = 2.0
margin_right = 485.0
margin_bottom = 269.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New_Button" type="Button" parent="Control"]
margin_left = 5.49491
margin_top = 271.946
margin_right = 45.4949
margin_bottom = 291.946
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open_Button" type="Button" parent="Control"]
margin_left = 51.939
margin_top = 272.197
margin_right = 98.939
margin_bottom = 292.197
text = "Open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewFileUI" type="Control" parent="."]
visible = false
margin_left = 3.0
margin_top = 6.0
margin_right = 487.0
margin_bottom = 274.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Greyout" type="Sprite" parent="NewFileUI"]
modulate = Color( 0.345098, 0.345098, 0.345098, 1 )
self_modulate = Color( 0.298039, 0.298039, 0.298039, 1 )
position = Vector2( 241.393, 132.837 )
scale = Vector2( 483.039, 266.851 )
texture = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="NewFileUI"]
margin_left = 56.2408
margin_top = 124.256
margin_right = 431.241
margin_bottom = 148.256
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OKButton" type="Button" parent="NewFileUI"]
margin_left = 398.599
margin_top = 151.315
margin_right = 429.599
margin_bottom = 171.315
text = "OK"

[node name="CancelButton" type="Button" parent="NewFileUI"]
margin_left = 337.344
margin_top = 151.82
margin_right = 391.344
margin_bottom = 171.82
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}
